Setup webpack and react

--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>Test</title>
+    <title>Glory CI</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <div id="app"></div>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
